@@ -1537,8 +1537,9 @@ struct reservedword init_spin2_words[] = {
     { "bmask", SP_BMASK },
     { "cogspin", SP_COGINIT },
     { "decod", SP_DECODE },
-    { "encod", SP_ENCODE },
+    { "encod", SP_ENCODE2 },
     { "frac", SP_FRAC },
+    { "fvar", SP_FVAR },
     { "ones", SP_ONES },
     { "reg", SP_COGREG },
     { "sca", SP_UNSHIGHMULT },
