@@ -143,6 +143,7 @@ FixupList(AST *list)
 %token SP_BYTE       "BYTE"
 %token SP_WORD       "WORD"
 %token SP_LONG       "LONG"
+%token SP_FVAR       "FVAR"
 
 %token SP_INSTR      "instruction"
 %token SP_INSTRMODIFIER "instruction modifier"
@@ -237,7 +238,8 @@ FixupList(AST *list)
 %token SP_SQRT       "SQRT (^^)"
 %token SP_ABS        "ABS (||)"
 %token SP_DECODE     "DECOD (|<)"
-%token SP_ENCODE     "ENCOD (>|)"
+%token SP_ENCODE     ">|"
+%token SP_ENCODE2    "ENCOD"
 %token SP_NOT        "NOT (!!)"
 %token SP_DOUBLETILDE "~~"
 %token SP_INCREMENT  "++"
@@ -272,7 +274,7 @@ FixupList(AST *list)
 %left '|' '^'
 %left '&'
 %left SP_ROTL SP_ROTR SP_SHL SP_SHR SP_SAR SP_REV SP_REV2 SP_SIGNX SP_ZEROX
-%left SP_NEGATE SP_BIT_NOT SP_ABS SP_SQRT SP_DECODE SP_ENCODE SP_ALLOCA SP_ADDPINS SP_ADDBITS SP_ONES SP_BMASK SP_QLOG SP_QEXP
+%left SP_NEGATE SP_BIT_NOT SP_ABS SP_SQRT SP_DECODE SP_ENCODE SP_ENCODE2 SP_ALLOCA SP_ADDPINS SP_ADDBITS SP_ONES SP_BMASK SP_QLOG SP_QEXP
 %left '@' '~' '?' SP_RANDOM SP_DOUBLETILDE SP_INCREMENT SP_DECREMENT SP_DOUBLEAT SP_TRIPLEAT
 %left SP_CONSTANT SP_FLOAT SP_TRUNC SP_ROUND
 
@@ -1118,8 +1120,12 @@ expr:
     { $$ = AstOpAssign(K_DECODE, $3, NULL); }
   | SP_ENCODE expr
     { $$ = AstOperator(K_ENCODE, NULL, $2); }
+  | SP_ENCODE2 expr
+    { $$ = AstOperator(K_ENCODE2, NULL, $2); }
   | SP_ENCODE '=' expr %prec SP_ASSIGN
     { $$ = AstOpAssign(K_ENCODE, $3, NULL); }
+  | SP_ENCODE2 '=' expr %prec SP_ASSIGN
+    { $$ = AstOpAssign(K_ENCODE2, $3, NULL); }
   | SP_QLOG expr
     { $$ = AstOperator(K_QLOG, NULL, $2); }
   | SP_QEXP expr
