@@ -3,6 +3,7 @@ Version 4.2.4
 - Fixed detection of result variables in inline asm (e.g. polxy builtin)
 - Fixed handling of # at start of line in Spin CON blocks
 - Fixed label detection on instructions like djnf
+- Fixed Spin2 ENCOD operator
 - Optimized P2 multiplication by constants
 - Properly supported expressions on strings (like "abc"|m) in Spin
 - Implemented INPUT #n in BASIC
